# swanton

./: LICENSE  README.md  Speech_Generator.py  audio_response.py  corrections.json  dcls.sh  debian_setup.sh  dils.sh  docker-compose.yml  gunicorn_config.py  idk.yml  log_input.py  log_queries.py  logging-requirements.txt  mapping.py  mapping_test_cases.py  pyproject.toml  rasa_api_call.py  rmdi.sh  run.sh  run_assistant.py  start.sh  stopwords.txt  story_converter.py  stream_deepspeech.py  swanton.service  swanton_qa_pairs.csv  text_to_speech.py  voice_kit_raspbian_setup.sh
.github/ISSUE_TEMPLATE/: okr-feature-request.md
docker_scripts/: follow_logs_of.sh  rmdc.sh  stop.sh
rasa-1.x/: arm-src.env  docker-compose.yml  domain.yml  endpoints.yml  init.sh  start-ssl.sh  x86-src.env
rasa-1.x/data/: nlu.md  stories.md
rasa-1.x/nginx-conf/: nginx.conf
response_data/: answer_to_file.json
